<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2013 The CyanogenMod Project
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<com.google.android.setupdesign.GlifLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setup_wizard_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/SudContentFrame">

        <FrameLayout
            android:id="@+id/page"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/setup_card_spacing">

                    <LinearLayout
                        android:id="@+id/location"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/setup_card_spacing"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_card_padding_vertical"
                        android:paddingBottom="@dimen/setup_card_padding_vertical"
                        android:background="@drawable/setup_card"
                        android:clickable="true">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/location_access_title"
                                android:textAppearance="?android:attr/textAppearanceListItem" />

                            <TextView
                                android:id="@+id/location_summary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/location_access_summary"
                                android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
                        </LinearLayout>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/location_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/location_text_margin_left"
                            android:duplicateParentState="true"
                            android:clickable="false"
                            android:focusable="false" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/location_category_gps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_category_padding_top"
                        android:paddingBottom="@dimen/setup_category_padding_bottom"
                        android:text="@string/location_category_gps"
                        android:textStyle="bold"
                        android:textColor="?android:attr/colorAccent"
                        android:textAppearance="?android:attr/textAppearanceListItemSecondary" />

                    <LinearLayout
                        android:id="@+id/location_agps"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/setup_card_spacing"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_card_padding_vertical"
                        android:paddingBottom="@dimen/setup_card_padding_vertical"
                        android:background="@drawable/setup_card"
                        android:clickable="true">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/location_agps_title"
                                android:textAppearance="?android:attr/textAppearanceListItem" />

                            <TextView
                                android:id="@+id/location_agps_summary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/location_agps_access_summary"
                                android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
                        </LinearLayout>

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/location_agps_checkbox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/location_text_margin_left"
                            android:duplicateParentState="true"
                            android:clickable="false"
                            android:focusable="false"
                            android:checked="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/location_supl"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/setup_card_spacing"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_card_padding_vertical"
                        android:paddingBottom="@dimen/setup_card_padding_vertical"
                        android:background="@drawable/setup_card"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_supl_title"
                            android:textAppearance="?android:attr/textAppearanceListItem" />

                        <TextView
                            android:id="@+id/location_supl_summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="?android:attr/colorAccent"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_supl_desc"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/location_psds"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/setup_card_spacing"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_card_padding_vertical"
                        android:paddingBottom="@dimen/setup_card_padding_vertical"
                        android:background="@drawable/setup_card"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_psds_title"
                            android:textAppearance="?android:attr/textAppearanceListItem" />

                        <TextView
                            android:id="@+id/location_psds_summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="?android:attr/colorAccent"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_psds_desc"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/location_category_services"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_category_padding_top"
                        android:paddingBottom="@dimen/setup_category_padding_bottom"
                        android:text="@string/location_category_services"
                        android:textStyle="bold"
                        android:textColor="?android:attr/colorAccent"
                        android:textAppearance="?android:attr/textAppearanceListItemSecondary" />

                    <LinearLayout
                        android:id="@+id/location_network"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/setup_card_spacing"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_card_padding_vertical"
                        android:paddingBottom="@dimen/setup_card_padding_vertical"
                        android:background="@drawable/setup_card"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_network_title"
                            android:textAppearance="?android:attr/textAppearanceListItem" />

                        <TextView
                            android:id="@+id/location_network_summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="?android:attr/colorAccent"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_network_desc"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/location_geocoder"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/setup_card_padding_horizontal"
                        android:paddingRight="@dimen/setup_card_padding_horizontal"
                        android:paddingTop="@dimen/setup_card_padding_vertical"
                        android:paddingBottom="@dimen/setup_card_padding_vertical"
                        android:background="@drawable/setup_card"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_geocoder_title"
                            android:textAppearance="?android:attr/textAppearanceListItem" />

                        <TextView
                            android:id="@+id/location_geocoder_summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="?android:attr/colorAccent"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location_geocoder_desc"
                            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </FrameLayout>

        <org.bestrom.setupwizard.NavigationLayout
            android:id="@+id/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</com.google.android.setupdesign.GlifLayout>
